--- a/index.htm
+++ b/index.htm
@@ -14,16 +14,8 @@
             }
         </style>
         
-        <!-- load angular via CDN -->
-        <script src="/node_modules/angular/angular.min.js"></script>
-        <script src="/node_modules/angular-route/angular-route.min.js"></script>
-        <script src="//code.angularjs.org/1.3.0-rc.2/angular-resource.min.js"></script>
-        <script src="/dist/app.js"></script>
-        <script src="/dist/directives/home/homeDirectives.js"></script>
-        <script src="/dist/directives/weatherReport/directives.js"></script>
-        <script src="/dist/directives/forecast/directives.js"></script>
-        <script src="/dist/routes.js"></script>
-        <script src="/dist/services/services.js"></script>
+        <!-- load angular via CDN -->        
+        <script src="/dist/src/dist/bundle.js"></script>
     </head>
     <body>
 
