changed out folder

--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,7 @@
         </style>
         
         <!-- load angular via CDN -->        
-        <script src="/dist/src/dist/bundle.js"></script>
+        <script src="/dist/bundle.js"></script>
     </head>
     <body>
 
